gcc/testsuite/g++.old-deja/g++.mike/misc3.C
// { dg-do assemble  }
// GROUPS uncaught
int a;// { dg-message "" } .*
int a;// { dg-error "" } .*
